--- a/style.css
+++ b/style.css
@@ -105,6 +105,46 @@ h2 {
   height: 300px;
 }
 
+.empon-penjelasan {
+  background-color:#fff9eb;
+  width: 100%;
+  height: 700px;
+  display: flex;
+  align-items: center;
+}
+
+.empon-headline {
+  width: 100%;
+  text-shadow: -8px 2px 10px rgba(145, 132, 113, 0.817);
+  margin-left: 50px;
+}
+
+.empon-latin h1 {
+  margin: 0;
+  
+}
+
+.empon-aksara h1 {
+  margin-top: 0;
+}
+
+.empon-latin {
+  font-family: "League Spartan",sans-serif;
+  font-size: 80px;
+}
+
+
+.empon-teks {
+  height: 200px;
+  align-items: center;
+  font-family:"Raleway",sans-serif;
+  font-weight:100;
+  text-align: left;
+  margin-right: 100px;
+  margin-left: 50px;
+  margin-bottom: 70px;
+}
+
 .macam-section {
   text-align: center;
   padding: 60px 20px;
