--- a/style.css
+++ b/style.css
@@ -304,3 +304,143 @@ h2 {
   font-size: 13px;
   font-weight: bold;
 }
+
+/* ------------------- SECTION OLAHAN -------------------------- */
+.div-olahan {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  padding: 40px;
+}
+
+/* --- lingkaran luar --- */
+.circle-card {
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  position: relative;
+  text-align: center;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.hijau {
+  background: rgb(156, 255, 156);
+}
+
+.merah {
+  background: #ffd4d4;
+}
+
+.kuning {
+  background: #fff3c2;
+}
+
+.coklat {
+  background: #ffefc1;
+}
+
+/* --- lingkaran dalam --- */
+.inner-circle-seruni {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  background: radial-gradient(circle, #e8ffe1, #71ff39);
+  margin: 10px auto;
+  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.inner-circle-uwuh {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  background: radial-gradient(circle, #ffd4d4, #d60328);
+  margin: 10px auto;
+  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.inner-circle-temulawak {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  background: radial-gradient(circle, #fff0b1, #ff9900);
+  margin: 10px auto;
+  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.inner-circle-jahe {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  background: radial-gradient(circle, #fffeb1, #c67800);
+  margin: 10px auto;
+  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* --- nama olahan --- */
+.title-olahan {
+  position: absolute;
+  top: 5px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 18px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  z-index: 10;
+}
+
+/* --- teks samping kanan kiri--- */
+.side-text {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 18px;
+  color: #7a3e00;
+  writing-mode: vertical-rl;
+  text-orientation: mixed;
+}
+
+.side-text.left {
+  left: 10px;
+  transform: translateY(-50%) rotate(180deg);
+}
+
+.side-text.right {
+  right: 10px;
+}
+
+/* --- foto/elemen --- */
+.drink-img {
+  width: 110px;
+  height: 110px;
+  border-radius: 8px;
+  object-fit: cover;
+}
+
+.stars {
+  font-size: 28px;
+  color: gold;
+  position: absolute;
+  bottom: 5px;
+  left: 50%;
+  transform: translateX(-50%);
+}
