--- a/style.css
+++ b/style.css
@@ -40,7 +40,8 @@ h2 {
 
 .teks-kanan,
 .teks-kiri {
-  font-size: 70px;
+  font-size: 90px;
+  color: #d0a85a;
   font-weight: lighter;
   opacity: 0;
   position: relative;
@@ -123,11 +124,13 @@ h2 {
 
 .empon-latin h1 {
   margin: 0;
-  
+  font-size: 130px;
 }
 
 .empon-aksara h1 {
   margin-top: 0;
+  font-size: 25px;
+  text-align: center;
 }
 
 .empon-latin {
@@ -140,19 +143,27 @@ h2 {
   height: 200px;
   align-items: center;
   font-family:"Raleway",sans-serif;
-  font-weight:100;
   text-align: left;
   margin-right: 100px;
-  margin-left: 50px;
+  margin-left: 100px;
   margin-bottom: 70px;
   justify-content: center;
   align-items: center;
   display: flex;
 }
 
+.empon-teks h1{
+  font-size: 45px;
+  font-weight:bolder;
+  color:#d0a85a;
+  margin: 30px 0 10px 0;
+  text-shadow: 1px 1px 5px rgb(138, 104, 41);
+}
 .empon-teks h2{
-  font-size: 19.5px;
-  font-weight: lighter;
+  font-size: 25px;
+  font-weight:750;
+  margin: 0;
+  color:#7b542f
 }
 
 .macam-section {
@@ -205,102 +216,145 @@ h2 {
 }
 
 
-
-.jahe-body {
-  font-family: "Noto Sans Javanese", sans-serif;
-  background-color: #f9f9f9;
-  /* padding-top: 400px; */
-  text-align: center;
-  color: #7b542f;
+/* ------------------- SECTION OLAHAN -------------------------- */
+.div-olahan {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  padding: 40px;
 }
 
-/* !!! HTML JAHE !!! */
-
-.jahe-body {
-  font-family: "Noto Sans Javanese", sans-serif;
-  background-color: #f9f9f9;
-  /* padding-top: 400px; */
-  text-align: center;
-  color: #7b542f;
-}
-
-.jahe-body {
+/* --- lingkaran luar --- */
+.circle-card {
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
   position: relative;
-  width: 100%;
-  height: 100%;
+  text-align: center;
+  overflow: hidden;
   display: flex;
-}
-
-.jahe-contents{
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  height: 100vh;
-}
-
-.jahe-left{
-  display: flex;
-  width: 50%;
-}
-
-.jahe-left .c-jahe{
-  display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  background: #d0b466;
-  border-radius: 0 600px 600px 0;
-  width: 620px;
-  height: 620px;
-  z-index: -1;
+  justify-content: center;
+}
+
+.hijau {
+  background: rgb(156, 255, 156);
+}
+
+.merah {
+  background: #ffd4d4;
+}
+
+.kuning {
+  background: #fff3c2;
+}
+
+.coklat {
+  background: #ffefc1;
+}
+
+/* --- lingkaran dalam --- */
+.inner-circle-seruni {
   position: absolute;
-}
-
-.jahe-left .jahe-img{
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  background: radial-gradient(circle, #e8ffe1, #71ff39);
+  margin: 10px auto;
+  box-shadow: 0 0 5px rgba(0,0,0,0.2);
   display: flex;
-  width: 100%;
-  height: 50%;
-  z-index: 2;
-}
-
-.jahe-right{
-  display: flex;
-  width: 50%;
-  justify-content: center;
-  flex-direction: column;
-  /* padding: 20rem 50rem; */
   align-items: center;
-}
-
-.jahe-text{
-  display: flex;
-  flex-direction: column;
   justify-content: center;
+}
+
+.inner-circle-uwuh {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  background: radial-gradient(circle, #ffd4d4, #d60328);
+  margin: 10px auto;
+  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+  display: flex;
   align-items: center;
+  justify-content: center;
 }
 
-.jahe-right h1{
-  font-size: 50px;
-  margin-bottom: 5px;
+.inner-circle-temulawak {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  background: radial-gradient(circle, #fff0b1, #ff9900);
+  margin: 10px auto;
+  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.jahe-right p{
-  font-size: 16.5px;
-  line-height: 1.5; 
+.inner-circle-jahe {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  background: radial-gradient(circle, #fffeb1, #c67800);
+  margin: 10px auto;
+  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.back-button{
-  background: linear-gradient(180deg, #7b542f, #b6771d);
-  display: inline-block;
-  color: white;
-  text-decoration: none;
-  width: 100px;
-  height: 35px;
-  border-radius: 30px;
-}
-
-.back-button p{
-  font-family: "League Spartan", sans-serif;
-  margin: 10px;
-  font-size: 13px;
+/* --- nama olahan --- */
+.title-olahan {
+  position: absolute;
+  top: 5px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 18px;
   font-weight: bold;
+  letter-spacing: 1px;
+  z-index: 10;
 }
+
+/* --- teks samping kanan kiri--- */
+.side-text {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 18px;
+  color: #7a3e00;
+  writing-mode: vertical-rl;
+  text-orientation: mixed;
+}
+
+.side-text.left {
+  left: 10px;
+  transform: translateY(-50%) rotate(180deg);
+}
+
+.side-text.right {
+  right: 10px;
+}
+
+/* --- foto/elemen --- */
+.drink-img {
+  width: 110px;
+  height: 110px;
+  border-radius: 8px;
+  object-fit: cover;
+}
+
+.stars {
+  font-size: 28px;
+  color: gold;
+  position: absolute;
+  bottom: 5px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+
+
