--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
 html {
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   scrollbar-width: none; /* Firefox, Safari 18.2+, Chromium 121+ */
+  scroll-behavior: smooth;
 }
 html::-webkit-scrollbar {
   display: none; /* Older Safari and Chromium */
@@ -86,7 +87,7 @@ h2 {
   background-size: 200% 100%;
   cursor: pointer;
   transition: background-position 0.3s ease, transform 0.2s ease;
-
+  text-decoration: none;
   z-index: 10;
 }
 
@@ -160,15 +161,22 @@ h2 {
   text-shadow: 1px 1px 5px rgb(138, 104, 41);
 }
 .empon-teks h2{
-  font-size: 25px;
-  font-weight:750;
+  font-size: 17.5px;
   margin: 0;
   color:#7b542f
 }
 
 .macam-section {
   text-align: center;
-  padding: 60px 20px;
+  padding: 60px 40px;
+  background-image: linear-gradient(to bottom, #7b542f, #8a5c2c, #996529, #a86e24, #b6771d);
+  height: 26rem;
+}
+
+.judul-macam {
+  font-size: 36px;
+  color: #fff9eb;
+  margin-bottom: 20px;
 }
 
 .mySwiper {
@@ -222,6 +230,8 @@ h2 {
   justify-content: center;
   gap: 50px;
   padding: 40px;
+  margin-bottom: 5rem;
+  margin-top: 8rem;
 }
 
 /* --- lingkaran luar --- */
@@ -356,5 +366,12 @@ h2 {
   transform: translateX(-50%);
 }
 
-
+.footer {
+  background-color: #7b542f;
+  text-align: center;
+  padding: 5px 0;
+  font-size: 14px;
+  color: #fff7ef;
+  border-radius: 25px 25px 0 0;
+}
 
