--- a/stylemanfaat.css
+++ b/stylemanfaat.css
@@ -1,6 +1,8 @@
+/* -----JAHE HTML----- */
+
 .jahe-body {
   font-family: "Noto Sans Javanese", sans-serif;
-  background-color: #f9f9f9;
+  background-color: #fff7ef;
   width: 100%;
   height: 100vh;
   margin: 0;
@@ -80,6 +82,372 @@
 }
 
 .jahe-right p {
+  font-family: "Raleway",sans-serif;
+  font-size: 20px;
+  font-weight: 450;
+  color: #524215;
+  margin: 5px 0 0 0;
+  line-height: 1.6;
+  max-width: 400px;
+  text-align: left;
+  text-shadow: 1px 1px 5px #8e864675;
+}
+
+.back-button {
+  background: linear-gradient(180deg, #7b542f, #b6771d);
+  color: rgb(241, 241, 241);
+  text-decoration: none;
+  width: 100px;
+  height: 35px;
+  border-radius: 30px;
+  text-align: center;
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.back-button :hover {
+    box-shadow: 1px 1px 1px gold;
+}
+
+.back-button p {
+  font-family: "League Spartan", sans-serif;
+  color: wheat;
+  margin: 0;
+  font-size: 13px;
+  font-weight: bold;
+}
+
+/* -----TEMULAWAK HTML----- */
+
+.temu-body {
+  font-family: "Noto Sans Javanese", sans-serif;
+  background-color: #fff7ef;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.temu-contents {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+
+/* Kiri — background curved */
+.temu-left {
+  flex: 1;
+  background: #ce5e1b;
+  border-radius: 0 50% 50% 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.c-temu {
+    position: relative; /* penting! */
+}
+
+.close-btn {
+    position: absolute;
+    top: 90px;
+    left: 20px;
+    color: white;
+    cursor: pointer;
+    text-decoration: none;
+    z-index: 10;
+    transition: 0.5s;
+}
+
+.close-btn span {
+    font-size: 100px;
+}
+
+
+.temu-img {
+  width: 100%;
+  height: auto;
+  margin-left: 15%;
+}
+
+/* Kanan — teks */
+.temu-right {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;   /* ← mulai dari kiri agar tidak tabrakan */
+  padding-left: 15%;
+}
+
+.temu-right h1 {
+  font-family: "League Spartan", sans-serif;
+  font-size: 85px;
+  margin-bottom: 0px;
+  margin: 0;
+  color: #ce5e1b;
+  text-shadow: 1px 1px 5px #a39d70;
+}
+
+.temu-right h2 {
+    font-family: "Noto Sans Javanese",sans-serif;
+    font-size: 35px;
+    margin: 0;
+    color: #ce5e1b;
+    text-shadow: 1px 1px 5px #a39d70;
+}
+
+.temu-right p {
+  font-family: "Raleway",sans-serif;
+  font-size: 20px;
+  font-weight: 450;
+  color: #524215;
+  margin: 5px 0 0 0;
+  line-height: 1.6;
+  max-width: 400px;
+  text-align: left;
+  text-shadow: 1px 1px 5px #8e864675;
+}
+
+.back-button {
+  background: linear-gradient(180deg, #7b542f, #b6771d);
+  color: rgb(241, 241, 241);
+  text-decoration: none;
+  width: 100px;
+  height: 35px;
+  border-radius: 30px;
+  text-align: center;
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.back-button :hover {
+    box-shadow: 1px 1px 1px gold;
+}
+
+.back-button p {
+  font-family: "League Spartan", sans-serif;
+  color: wheat;
+  margin: 0;
+  font-size: 13px;
+  font-weight: bold;
+}
+
+
+
+/* -----SEREH HTML----- */
+.sereh-body {
+  font-family: "Noto Sans Javanese", sans-serif;
+  background-color: #fff7ef;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sereh-contents {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+
+/* Kiri — background curved */
+.sereh-left {
+  flex: 1;
+  background: #93c741;
+  border-radius: 0 50% 50% 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.c-sereh {
+    position: relative; /* penting! */
+}
+
+.close-btn {
+    position: absolute;
+    top: 90px;
+    left: 20px;
+    color: white;
+    cursor: pointer;
+    text-decoration: none;
+    z-index: 10;
+    transition: 0.5s;
+}
+
+.close-btn span {
+    font-size: 100px;
+}
+
+
+.sereh-img {
+  width: 100%;
+  height: auto;
+  margin-left: 15%;
+}
+
+/* Kanan — teks */
+.sereh-right {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;   /* ← mulai dari kiri agar tidak tabrakan */
+  padding-left: 15%;
+}
+
+.sereh-right h1 {
+  font-family: "League Spartan", sans-serif;
+  font-size: 85px;
+  margin-bottom: 0px;
+  margin: 0;
+  color: #93c741;
+  text-shadow: 1px 1px 5px #a39d70;
+}
+
+.sereh-right h2 {
+    font-family: "Noto Sans Javanese",sans-serif;
+    font-size: 35px;
+    margin: 0;
+    color: #93c741;
+    text-shadow: 1px 1px 5px #a39d70;
+}
+
+.sereh-right p {
+  font-family: "Raleway",sans-serif;
+  font-size: 20px;
+  font-weight: 450;
+  color: #524215;
+  margin: 5px 0 0 0;
+  line-height: 1.6;
+  max-width: 400px;
+  text-align: left;
+  text-shadow: 1px 1px 5px #8e864675;
+}
+
+.back-button {
+  background: linear-gradient(180deg, #7b542f, #b6771d);
+  color: rgb(241, 241, 241);
+  text-decoration: none;
+  width: 100px;
+  height: 35px;
+  border-radius: 30px;
+  text-align: center;
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.back-button :hover {
+    box-shadow: 1px 1px 1px gold;
+}
+
+.back-button p {
+  font-family: "League Spartan", sans-serif;
+  color: wheat;
+  margin: 0;
+  font-size: 13px;
+  font-weight: bold;
+}
+
+
+/* -----SECANG HTML----- */
+
+
+.secang-body {
+  font-family: "Noto Sans Javanese", sans-serif;
+  background-color: #fff7ef;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.secang-contents {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+
+/* Kiri — background curved */
+.secang-left {
+  flex: 1;
+  background: #a52d08;
+  border-radius: 0 50% 50% 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.c-secang {
+    position: relative; /* penting! */
+}
+
+.close-btn {
+    position: absolute;
+    top: 90px;
+    left: 20px;
+    color: white;
+    cursor: pointer;
+    text-decoration: none;
+    z-index: 10;
+    transition: 0.5s;
+}
+
+.close-btn span {
+    font-size: 100px;
+}
+
+
+.secang-img {
+  width: 100%;
+  height: auto;
+  margin-left: 15%;
+}
+
+/* Kanan — teks */
+.secang-right {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;   /* ← mulai dari kiri agar tidak tabrakan */
+  padding-left: 15%;
+}
+
+.secang-right h1 {
+  font-family: "League Spartan", sans-serif;
+  font-size: 85px;
+  margin-bottom: 0px;
+  margin: 0;
+  color: #a52d08;
+  text-shadow: 1px 1px 5px #a39d70;
+}
+
+.secang-right h2 {
+    font-family: "Noto Sans Javanese",sans-serif;
+    font-size: 35px;
+    margin: 0;
+    color: #a52d08;
+    text-shadow: 1px 1px 5px #a39d70;
+}
+
+.secang-right p {
   font-family: "Raleway",sans-serif;
   font-size: 20px;
   font-weight: 450;
